# django-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json  docker-compose.dev.yml
.devcontainer/scripts/: post-create.sh  post-start.sh
