[project]
name = "django-template"
version = "0.1.0"
description = "A powerful Django template for creating web applications."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.6",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pyright>=1.1.394",
    "ruff>=0.9.6",
]
