[project]
name = "django-template"
version = "0.1.0"
description = "A powerful Django template for creating web applications."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["django>=5.1.6"]


[dependency-groups]
dev = ["django-stubs[compatible-mypy]>=5.1.3", "mypy>=1.15.0", "ruff>=0.9.6"]

[tool.uv]
package = false

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
